--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,13 +77,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
-  - family: primaryFont
-    fonts:
-      - asset: assets/fonts/primaryFonts/NotoSans_SemiCondensed-Regular.ttf
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: primaryFont
+      fonts:
+        - asset: assets/fonts/primaryFonts/OpenSans_Condensed-Regular.ttf
+        - asset: assets/fonts/primaryFonts/OpenSans-Bold.ttf
+        - asset: assets/fonts/primaryFonts/OpenSans-ExtraBold.ttf
+        - asset: assets/fonts/primaryFonts/OpenSans-SemiBold.ttf
+        - asset: assets/fonts/primaryFonts/OpenSans_Condensed-Bold.ttf
+        - asset: assets/fonts/primaryFonts/OpenSans_Condensed-ExtraBold.ttf
+        - asset: assets/fonts/primaryFonts/OpenSans_Condensed-SemiBold.ttf
+    - family: secondaryFont
+      fonts:
+        - asset: assets/fonts/secondaryFonts/NotoSans_SemiCondensed-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
