--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   lottie: ^3.1.2
   animated_splash_screen: ^1.3.0
+  video_player: ^2.3.0
+  smooth_page_indicator:
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
