--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   lottie: ^3.1.2
   animated_splash_screen: ^1.3.0
+  carousel_slider: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
    - assets/fonts/
    - assets/icons/
    - assets/animations/
+   - assets/images/sample/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
