--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   smooth_page_indicator:
   provider: ^5.0.0
   shared_preferences: ^2.0.9
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
