--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.9
   intl_phone_field: ^3.2.0
+  custom_rating_bar: ^2.0.5
 
 dev_dependencies:
   flutter_test:
