--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,17 @@ dependencies:
   carousel_slider: ^4.0.0
   video_player: ^2.3.0
   smooth_page_indicator:
-  provider: ^5.0.0
+  provider: 6.1.2
   shared_preferences: ^2.0.9
   intl_phone_field: ^3.2.0
   custom_rating_bar: ^2.0.5
+  vimeo_player_flutter: ^0.1.0
+  webview_flutter: ^4.4.2
+  youtube_player_flutter: ^8.0.0
+  youtube_explode_dart: ^2.2.1
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
