--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
   http: ^1.2.1
+  curved_navigation_bar: ^1.0.5
 
 dev_dependencies:
   flutter_test:
