--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   equatable: ^2.0.5
   http: ^1.2.1
   curved_navigation_bar: ^1.0.5
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
